<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="850dp"
                tools:src="@tools:sample/avatars"
                tools:srcCompat="@tools:sample/avatars[12]"
                app:srcCompat="@drawable/ic_dog"
                android:contentDescription="@string/list_view_img_content_desc"/>
        <TextView
                android:id="@+id/tv_name"
                android:text="@string/tv_name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>

        <EditText
                android:id="@+id/tv_name_value"
                android:hint="@string/et_hint_name"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:inputType="text|textAutoCorrect|textAutoComplete"
                android:autofillHints=""/>

        <TextView
                android:id="@+id/tv_age"
                android:text="@string/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_age_value"
                android:hint="@string/et_hint_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:autofillHints=""/>

        <TextView
                android:id="@+id/tv_animal_type"
                android:text="@string/tv_animal_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_animal_type_value"
                android:hint="@string/et_hint_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text|textAutoCorrect|textAutoComplete"/>

        <TextView
                android:id="@+id/tv_animal_rase"
                android:text="@string/tv_animal_rase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_animal_rase_value"
                android:hint="@string/et_hint_rase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text|textAutoCorrect|textAutoComplete"/>

        <TextView
                android:id="@+id/tv_food_type"
                android:text="@string/tv_food_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_food_type_value"
                android:hint="@string/et_hint_food_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text|textAutoCorrect|textAutoComplete"/>

        <TextView
                android:id="@+id/tv_food_per_day"
                android:text="@string/tv_food_pr_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_food_per_day_value"
                android:hint="@string/et_hint_food_per_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="number"/>

        <TextView
                android:id="@+id/tv_food_left_notification"
                android:text="@string/tv_food_left_notification_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_food_left_notification_value"
                android:hint="@string/et_hint_food_left_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="number"/>

        <TextView
                android:id="@+id/tv_food_left"
                android:text="@string/tv_food_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_food_left_value"
                android:hint="@string/et_hint_food_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="number"/>

        <TextView
                android:id="@+id/tv_days_left_of_food"
                android:text="@string/tv_days_left_of_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="italic"/>

        <EditText
                android:id="@+id/tv_days_left_of_food_value"
                android:hint="@string/et_hint_food_left_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="number"/>

        <Button
                android:id="@+id/addBtn"
                android:text="@string/add_pet_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="25dp"
                android:layout_marginTop="40dp"
                android:textStyle="italic"/>

    </LinearLayout>


</ScrollView>