<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

    <ImageView
            android:id="@+id/list_view_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/list_view_img_content_desc"/>

    <LinearLayout
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/list_view_title_txt"
                android:text="@string/list_view_title"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/list_view_desc_txt"
                android:text="@string/list_view_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>